[package]
edition = "2021"
name = "into_actix_web_http_response"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = {version = "=1.0.28"}
syn = {version = "=1.0.107"}
proc_macro_helpers = {path = "../proc_macro_helpers"}
